# tuid

./: .cliff.toml  .committed.toml  .copyright.tmpl  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  Justfile  README.md  lefthook.yml
.github/workflows/: release.yml
tuid-bench/: Cargo.toml
tuid-bench/benches/: encoding.rs  rngs.rs  uuid.rs
tuid-examples/: Cargo.toml
tuid-examples/examples/: approx.rs  namespace.rs
tuid-py/: Cargo.toml  README.md  pyproject.toml
tuid-py/src/: lib.rs
tuid-rs/: CHANGELOG.md  Cargo.toml  README.md
tuid-rs/src/: config.rs  core.rs  generator.rs  lib.rs  time.rs
