[project]
name = "tuid"
version = "0.0.0"
description = "Sequential UUID generator"
authors = [
  { name = "Mohamed Seleem", email = "oss@mselee.com" }
]
license = { file = "LICENSE" }

[tool.poetry]
name = "tuid"
version = "0.0.0"
description = ""
authors = []

[tool.maturin]
bindings = "pyo3"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
maturin = "^0.12"

[build-system]
requires = ["poetry-core>=1.0.0",  "maturin>=0.12,<0.13"]
build-backend = "maturin"
