[package]
name = "tuid"
version = "0.1.0-alpha.0"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
authors = ["Mohamed Seleem <oss@mselee.com>"]
description = "Sequential UUID generator"
keywords = ["tuid", "uuid", "guid", "sequential", "identifier"]
repository = "https://github.com/mselee/tuid/blob/master/tuid-rs"
rust-version = "1.63.0"
include = ["**/*.rs", "LICENSE", "README.md", "Cargo.toml"]

[features]
default = ["fastrand", "uuid", "hex", "coarse"]
approx = ["coarse"]
coarse = ["dep:coarsetime"]
hex = ["dep:faster-hex", "dep:bstr"]
full = ["default", "approx"]

[dependencies]
fastrand = { version = "2.2", default-features = false, features = [
    "std",
], optional = true }
uuid = { version = "0.8", default-features = false, optional = true }
coarsetime = { version = "0.1.34", default-features = false, optional = true }
bstr = { version = "1.11", optional = true }
faster-hex = { version = "0.10.0", optional = true }
